Changelog
=========


2.6.3 (unreleased)
------------------

- Remove DnD upload mask (from acient jquerytools), it does no longer work. [mathias.leimgruber]


2.6.2 (2021-07-20)
------------------

- Check for invalid_mimeteypes key in registry before accessing it directly. [mathias.leimgruber]


2.6.1 (2021-07-20)
------------------

- Fix setting document_date if created without form. [mathias.leimgruber]


2.6.0 (2021-04-28)
------------------

- Support HEAD request for /plone/folder/file.pdf/@@download/file/file.pdf [mathias.leimgruber]

- Support HEAD request for /plone/folder/file.pdf/"view | download" [mathias.leimgruber]


2.5.0 (2020-11-10)
------------------

- Feature: Restrict mimetypes allowed to use with ftw.file.File. [mathias.leimgruber]


2.4.4 (2020-10-12)
------------------

- Fix comma in filename generates corrupt content-disposition
  (correctly implement rfc6266) [Nachtalb]


2.4.3 (2020-10-08)
------------------

- Fix scale generation of DX Images in TinyMCE [Nachtalb]


2.4.2 (2020-09-16)
------------------

- Add missing documentDate indexer for dexterity file [Nachtalb]
  Reindexing has to be done manually if necessary for your installation.


2.4.1 (2020-09-09)
------------------

- Fix saving file with whole windows file path as filename when uploading through Microsoft Edge [Nachtalb]
- Fix JS load order issue [Nachtalb]


2.4.0 (2020-09-03)
------------------

- Reimplement drag'n'drop feature for Plone 5 and 4 [Nachtalb]


2.3.2 (2020-07-01)
------------------

- Add ignore_fields parameter to ATToDXMixin.install_ftw_file_dx_migration().  [djowett-ftw]


2.3.1 (2020-01-31)
------------------

- Quote URL (including filename) also in file redirect view. [mathias.leimgruber]

- Use z2 Server to be closer to the real world in tests. [mathias.leimgruber]


2.3.0 (2020-01-23)
------------------

- Remove drag and drop upload to reduce support overhead (it only worked in Plone 4). [djowett-ftw]

2.2.6 (2020-01-21)
------------------
