@@ -7,6 +7,8 @@ Changelog
 
 - Remove DnD upload mask (from acient jquerytools), it does no longer work. [mathias.leimgruber]
 
+- Trigger modified event after upload via DnD. [mathias.leimgruber]
+
 
 2.6.2 (2021-07-20)
 ------------------
